@@ -1,3 +1,8 @@
+2010-03-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (clearcase-file-fprop): try different ways of
+	obtaining the files FPROP in order
+
 2010-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* vc-clearcase.el (clearcase-vob-tag-for-path): on windows,
